# calabar

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  release.yml  tests.yml
calabar/: __init__.py  arch.py  driveutils.py  install.py  notifications.py  utils.py
coutils/: __init__.py  install.py  notifications.py
docs/: Makefile  conf.py  index.rst
docs/modules/: arch.rst  driveutils.rst  install.rst  notifications.rst  utils.rst
docs/notes/: drive.rst  installation.rst
easycolab/: __init__.py  arch.py  driveutils.py  install.py  notifications.py  utils.py
labco/: __init__.py  driveutils.py  install.py  notifications.py  utils.py
tests/: conftest.py
tests/manual/: README.md  template.ipynb  test_install.ipynb  test_upgrade_pytorch.ipynb
tests/unit/: conftest.py  mock_import.py  test_driveutils.py  test_install.py  test_install_pytorch.py  test_notifications.py  test_utils.py
